# linuxviewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  autogen.sh  debug.h  lvimconfig.h  sys.h
src/: Application.cxx  Application.h  ApplicationCreateInfo.cxx  ApplicationCreateInfo.h  CMakeLists.txt  DebugMessenger.cxx  DebugMessenger.h  DebugUtilsMessengerCreateInfoEXT.cxx  DebugUtilsMessengerCreateInfoEXT.h  GridInfo.h  GridInfoDecoder.cxx  GridInfoDecoder.h  HelloTriangleVulkanApplication.cxx  HelloTriangleVulkanApplication.h  HelloTriangleVulkanApplicationCreateInfo.cxx  HelloTriangleVulkanApplicationCreateInfo.h  InstanceData.h  LinuxViewerApplication.cxx  LinuxViewerApplication.h  LinuxViewerIconFactory.h  LinuxViewerMenuBar.cxx  LinuxViewerMenuBar.h  LinuxViewerMenuEntries.cxx  LinuxViewerMenuEntries.h  SampleParameters.h  TestApplication.cxx  TestApplication.h  TimerData.cxx  TimerData.h  VertexData.h  Window.cxx  Window.h  WindowCreateInfo.cxx  WindowCreateInfo.h  application.cxx
src/GUI_glfw3/: CMakeLists.txt  debug_ostream_operators.cxx  debug_ostream_operators.h  glfw3_test.cxx  gui_Application.cxx  gui_Application.h  gui_ErrorCodes.cxx  gui_MenuEntryKey.h  gui_Window.cxx  gui_Window.h  gui_WindowCreateInfo.cxx  gui_WindowCreateInfo.h  gui_WindowHints.h
src/GUI_glfw3/vulkan/: CMakeLists.txt  HelloTriangleDevice.cxx  HelloTriangleDevice.h  Pipeline.cxx  Pipeline.h  PipelineCreateInfo.cxx  PipelineCreateInfo.h  context_test.cxx
src/GUI_gtkmm3/: CMakeLists.txt  GUIApplication.cxx  GUIApplication.h  GUIIconFactory.cxx  GUIIconFactory.h  GUIMenuBar.cxx  GUIMenuBar.h  GUIMenuEntryKey.h  GUIWindow.cxx  GUIWindow.h  gui_Application.cxx  gui_Application.h  gui_IconFactory.cxx  gui_IconFactory.h  gui_MenuBar.cxx  gui_MenuBar.h  gui_MenuEntryKey.h  gui_Window.cxx  gui_Window.h
src/data_types/: AgentAccess.cxx  AgentAccess.h  AgentID.cxx  AgentID.h  AssetIdItemIdPair.cxx  AssetIdItemIdPair.h  BinaryData.cxx  BinaryData.h  Buddy.cxx  Buddy.h  CMakeLists.txt  Category.cxx  Category.h  DateTime.cxx  DateTime.h  FolderID.cxx  FolderID.h  Gender.cxx  Gender.h  InitialOutfit.cxx  InitialOutfit.h  InventoryFolder.cxx  InventoryFolder.h  LoginFlags.cxx  LoginFlags.h  LookAt.cxx  LookAt.h  ModerationLevel.cxx  ModerationLevel.h  Position.cxx  Position.h  RegionHandle.cxx  RegionHandle.h  RegionPositionLookAt.cxx  RegionPositionLookAt.h  SunCloudMoonTextures.cxx  SunCloudMoonTextures.h  UIConfig.cxx  UIConfig.h  URI.cxx  (+13 more)
src/examples/: CMakeLists.txt
src/examples/hello_triangle/: CMakeLists.txt  HelloTriangle.cxx  HelloTriangle.h  LogicalDevice.h  Triangle.cxx.weg  Triangle.h.weg  TrianglePipelineCharacteristic.h  Window.cxx  Window.h
src/gtkmmgui/: CMakeLists.txt  LinuxViewerApplication.cxx  LinuxViewerApplication.h  LinuxViewerIconFactory.cxx  LinuxViewerMenuBar.cxx  LinuxViewerWindow.cxx  LinuxViewerWindow.h
src/protocols/: CMakeLists.txt  GridInfo.cxx  GridInfoDecoder.cxx  GridInfoDecoder.h  LlsdDecoder.cxx  LlsdDecoder.h  UTF8_LLSD_Decoder.cxx  UTF8_LLSD_Decoder.h  UTF8_SAX_Decoder.cxx  UTF8_SAX_Decoder.h  XML_RPC_Data.h  XML_RPC_Decoder.cxx  XML_RPC_Decoder.h  XML_RPC_Encoder.cxx  XML_RPC_Encoder.h  XML_RPC_Response.cxx  XML_RPC_Response.h  XML_RPC_SingleStructResponse.cxx  XML_RPC_SingleStructResponse.h  XML_RPC_Struct.h  test_llsd_decoder_end_of_msg_finder.cxx  xmlrpc_initialize.cxx  xmlrpc_initialize.h  xmlrpc_test.cxx
src/protocols/xmlrpc/: ArrayDecoder.h  ArrayOfMemberDecoder.h  ArrayOfStructDecoder.h  ArrayWrapper.h  CMakeLists.txt  DecoderBase.h  ElementDecoder.cxx  ElementDecoder.h  IgnoreElement.cxx  IgnoreElement.h  LoginResponse.cxx  LoginResponse.h  MemberDecoder.h  MemberWrapper.h  Request.h  RequestParam.cxx  RequestParam.h  SingleStructResponse.cxx  SingleStructResponse.h  StructDecoder.h  StructDictionary.h  StructWrapper.h  WrapperBase.h  create_member_decoder.h  create_member_wrapper.h  has_xmlrpc_names.h  initialize.cxx  initialize.h  macros.h  write_value.h
src/resources/shaders/: shader.frag  triangle.vert
src/tests/: CMakeLists.txt  FrameResourcesCount.cxx  FrameResourcesCount.h  HeavyRectangle.cxx  HeavyRectangle.h  InstanceData.h  LogicalDevice.h  RandomPositions.h  SampleParameters.h  SingleButtonWindow.h  SlowWindow.h  TestApplication.h  Window.h  WindowEvents.h
src/tests/frame_resources_count/: CMakeLists.txt  FrameResourcesCount.cxx  FrameResourcesCount.h  HeavyRectangle.h  InstanceData.h  LogicalDevice.h  PushConstant.h  RandomPositions.h  SampleParameters.h  VertexData.h  Window.cxx  Window.h
src/tests/textures/: CMakeLists.txt  InstanceData.h  LogicalDevice.h  PushConstant.h  README  README.01122022  Square.cxx  Square.h  TextureTest.cxx  TextureTest.h  TopBottomPositions.h  VertexData.h  Window.h
src/tests/uniform_buffers/: .gitignore  BottomPosition.h  CMakeLists.txt  LeftPosition.h  (+13 more)
src/vulkan/: Application.cxx  Application.h  Application.inl.h  ApplicationInfo.h  AsyncTask.cxx  AsyncTask.h  Attachment.cxx  Attachment.h  BufferParameters.h  CMakeLists.txt  ClearValue.cxx  ClearValue.h  CommandBuffer.cxx  CommandBuffer.h  CommandBuffer.inl.h  CommandPool.cxx  CommandPool.h  CommandPoolCreateInfo.cxx  CommandPoolCreateInfo.h  Concepts.h  CurrentFrameData.h  DebugMessenger.cxx  DebugMessenger.h  DebugUtilsMessenger.cxx  DebugUtilsMessengerCreateInfoEXT.cxx  DebugUtilsMessengerCreateInfoEXT.h  Defaults.cxx  Defaults.h  DelayedDestroyer.cxx  DelayedDestroyer.h  DequeAllocator.h  DescriptorSetParameters.h  Device.cxx  Device.h  DeviceCreateInfo.cxx  DeviceCreateInfo.h  Directories.cxx  Directories.h  DispatchLoader.cxx  DispatchLoader.h  (+109 more)
src/vulkan.old/: ApplicationInfo.h  CMakeLists.txt  Device.cxx  DispatchLoader.h  HelloTriangleSwapchain.cxx  HelloTriangleSwapchain.h  InstanceCreateInfo.cxx  PhysicalDeviceFeatures.cxx  PhysicalDeviceFeatures.h  Pipeline.cxx  Pipeline.h  PipelineCreateInfo.h  Queue.h  QueueFamilyProperties.h  QueueFlags.cxx  QueueFlags.h  QueueReply.h  QueueRequest.h  README.init  README.struct  Swapchain.cxx  Swapchain.h  check_instance_extensions_availability.h  minimal_example.cxx  unique_handle.h
(+425 files in other folders)
